--- a/index.html
+++ b/index.html
@@ -6,16 +6,11 @@
 </head>
 <body>
     <ul>
-<<<<<<< HEAD
         <li>Vagrant: Gerenciando máquinas virtuais</li>
-        <li>Docker</li>
-=======
-        <li>Vagrant</li>
-        <li>Curso de Docker: Criando containers sem dor de cabeça</li>
->>>>>>> 4715fc61e90b144a7e47794e29178a333dafc71a
-        <li>Ansible</li>
+        <li>Docker: Criando containers sem dor de cabeça</li>
+        <li>Ansible: infaestrutura como código</li>
         <li>Integração Contínua: Maturidade e Produtividade no Desenvolvimento de Software</li>
-		<li>Kubernetes</li>
+		<li>Kubernetes: introuction to Kubernetes</li>
     </ul>
 </body>
 </html>
